# csv-simd

./: .gitignore  Cargo.toml  README.md  clippy.toml  design_notes_1.md  design_notes_2.md  notes.md  rust_howto.md  rustfmt.toml
res/: json_test.txt  reader_test01.csv  sample.csv  sample_rx.csv
src/: error.rs  helper.rs  json_test.rs  lib.rs  reader.rs  record_source.rs  stage1.rs  structure.rs  tape.rs  util.rs
src/avx/: shift_256_AVX.c  stage1.rs
src/avx2/: mod.rs  stage1.rs
